# rom-proto

./: .gitignore  .releaserc.json  CMakeLists.txt  LICENSE  README.md
.claude/memory/: MEMORY.md  feedback_no_coauthor.md  feedback_transport_decisions.md  project_rom_status.md  project_rom_vision.md  user_rodrigo.md
.github/workflows/: ci.yml  publish-npm.yml  publish-nuget.yml  publish-python.yml  release.yml
bindings/dotnet/: RMNunes.Rom.slnx
bindings/dotnet/src/RMNunes.Rom/: CrdtType.cs  KeyPair.cs  Peer.cs  ProtocollException.cs  RMNunes.Rom.csproj  Reliability.cs  ResolutionTier.cs  Transport.cs
bindings/dotnet/src/RMNunes.Rom/Interop/: LibraryResolver.cs  NativeMethods.cs  NativeTypes.cs  PeerHandle.cs  TransportHandle.cs
bindings/dotnet/tests/RMNunes.Rom.Tests/: HandshakeTests.cs  KeyPairTests.cs  PeerTests.cs  RMNunes.Rom.Tests.csproj  TransportTests.cs
bindings/python/: pyproject.toml
bindings/python/protocoll/: __init__.py  _ffi.py  peer.py  state.py  transport.py
bindings/python/tests/: test_basic.py
bindings/rust/: Cargo.toml
bindings/rust/protocoll/: Cargo.toml
bindings/rust/protocoll-sys/: Cargo.toml  build.rs
bindings/rust/protocoll-sys/src/: bindings.rs  lib.rs
bindings/rust/protocoll/src/: error.rs  lib.rs  peer.rs  state.rs  transport.rs
bindings/rust/protocoll/tests/: integration.rs
bindings/wasm/: .npmrc  CMakeLists.txt  package-lock.json  package.json  tsconfig.json
bindings/wasm/src/: index.ts  protocoll_wasm.cpp  types.ts
bindings/wasm/src/transports/: browser-transport.ts  websocket-transport.ts  webtransport-transport.ts
bindings/wasm/tests/: basic.test.ts
cmake/: CompilerWarnings.cmake  FindDPDK.cmake  FindMbedTLS.cmake  Platform.cmake
examples/: state_streaming_demo.cpp
examples/python-demo/: README.md  requirements.txt  state_streaming_demo.py
examples/rust-demo/: Cargo.toml  README.md
examples/rust-demo/src/: main.rs
examples/solidjs-demo/: index.html  package.json  tsconfig.json  vite.config.ts
examples/solidjs-demo/src/: App.tsx  index.tsx  useProtocoll.ts
include/protocoll/: peer.h  protocoll.h
include/protocoll/connection/: connection.h  connection_id.h  connection_manager.h  handshake.h  recovery.h
include/protocoll/relay/: aggregator.h  relay_node.h
include/protocoll/reliability/: ack_tracker.h  congestion.h  fec.h  freshness.h  sequence.h
include/protocoll/routing/: route_table.h  router.h
include/protocoll/security/: capability.h  crypto.h
include/protocoll/state/: event_log.h  observer.h  resolution.h  state_path.h  state_registry.h  subscription.h  version_vector.h
include/protocoll/state/crdt/: crdt.h  g_counter.h  lww_register.h  or_set.h  pn_counter.h
include/protocoll/transport/: async_transport.h  dpdk_transport.h  dtls_transport.h  external_transport.h  iocp_transport.h  iouring_transport.h  loopback_transport.h  transport.h  udp_transport.h
include/protocoll/util/: clock.h  hash.h  platform.h
include/protocoll/wire/: codec.h  frame.h  frame_types.h  packet.h
research/: 00-RESEARCH-INDEX.md  01-existing-protocols.md  02-video-streaming.md  03-state-sync.md  04-low-level-networking.md  05-paradigm-shifts.md  06-protocol-synthesis.md  07-beyond-udp.md
scripts/: sync-versions.mjs
src/: peer.cpp  protocoll_c_api.cpp
src/connection/: connection.cpp  connection_manager.cpp  handshake.cpp  recovery.cpp
src/relay/: aggregator.cpp  relay_node.cpp
src/reliability/: ack_tracker.cpp  congestion.cpp  fec.cpp  freshness.cpp
src/routing/: route_table.cpp  router.cpp
src/security/: capability.cpp  crypto.cpp
src/state/: event_log.cpp  observer.cpp  resolution.cpp  state_path.cpp  state_registry.cpp  subscription.cpp  version_vector.cpp
src/state/crdt/: g_counter.cpp  lww_register.cpp  or_set.cpp  pn_counter.cpp
src/transport/: async_transport.cpp  dpdk_transport.cpp  dtls_transport.cpp  external_transport.cpp  iocp_transport.cpp  iouring_transport.cpp  loopback_transport.cpp  udp_transport.cpp
src/util/: clock.cpp  hash.cpp
src/wire/: codec.cpp  frame.cpp  packet.cpp
tests/: test_ack_tracker.cpp  test_async_handshake.cpp  test_async_transport.cpp  test_c_api.cpp  test_capability.cpp  test_cli_decode.cpp  test_codec.cpp  test_congestion.cpp  test_connection.cpp  test_connection_manager.cpp  test_crypto.cpp  test_dpdk_transport.cpp  test_dtls_transport.cpp  test_event_log.cpp  test_external_transport.cpp  test_fec.cpp  test_frame.cpp  test_freshness.cpp  test_g_counter.cpp  test_handshake.cpp  test_integration.cpp  test_iocp_transport.cpp  test_loopback_transport.cpp  test_lww_register.cpp  test_mesh_topology.cpp  test_observer.cpp  test_or_set.cpp  test_packet.cpp  test_peer_multi_conn.cpp  test_pn_counter.cpp  test_recovery.cpp  test_relay_node.cpp  test_resolution.cpp  test_router.cpp  test_state_path.cpp  test_subscription.cpp  test_version_vector.cpp
tools/: protocoll_dump.cpp  protocoll_inspect.cpp
