[build-system]
requires = ["setuptools>=68", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "protocoll"
version = "0.1.0"
description = "Python bindings for the protocoll state streaming library"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["cffi>=1.16"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["protocoll*"]
