[build-system]
requires = ["setuptools>=68", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "rmnunes-rom"
version = "1.2.2"
description = "Python bindings for ROM (Replicated Object Memory) — CRDT state streaming with adaptive routing"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["cffi>=1.16"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["protocoll*"]
