[package]
name = "rmnunes-rom-sys"
version = "1.0.2"
edition = "2021"
description = "Raw FFI bindings for the ROM (Replicated Object Memory) C library"
license = "MIT"
repository = "https://github.com/rmnunes/rom-proto"
links = "protocoll"

[build-dependencies]
cmake = "0.1"

# Optional: regenerate bindings from header (requires libclang)
# [build-dependencies.bindgen]
# version = "0.71"
# optional = true
