[package]
name = "rmnunes-rom"
version = "1.2.1"
edition = "2021"
description = "Safe Rust bindings for ROM (Replicated Object Memory) — CRDT state streaming with adaptive routing"
license = "MIT"
repository = "https://github.com/rmnunes/rom-proto"

[dependencies]
rmnunes-rom-sys = { path = "../protocoll-sys" }

[dev-dependencies]
